fix card alignments

--- a/style.css
+++ b/style.css
@@ -1070,7 +1070,7 @@ main:nth-child(10){
 .card4 {
     text-align:center;
     position: absolute;
-    left: 820px;
+    left: 790px;
     width: 250px;
     height: 350px;
     margin-top: 200px;
